# PollenPhaseTransitionPaper

./: CMakeLists.txt  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_GUIDE_PRINT.html  README  pollen-main.yml  render_implementation_guide_pdf.ps1
BayesTraitsV5.0.3-Win64/BayesTraitsV5.0.3-Win64/: Artiodactyl.trees  Bird.trees  BirdTerritory.txt  Carnivores.trees  Carnivores.txt  Mammal.trees  MammalBody.txt  MammalBrainBody.txt  MammalBrainBodyGt.txt  MammalBrainBodyNoTapir.txt  MammalBrainBodyPredTapir.txt  MammalBrainBodySampleData.txt  MammalModelB.txt  Marsupials.trees  Marsupials.txt  NortheastBantu.trees  NortheastBantu.txt  Primates.trees
BayesTraitsV5.0.3-Win64/BayesTraitsV5.0.3-Win64/FabricRegression/: MammalBrBdSqrBd.txt
PhaseDiagramCalculations/Common/: wigner_compat.cpp  wigner_compat.h
PhaseDiagramCalculations/ConservedDynamics/: FiPyConservedDynamics.ipynb  ReadMe  conserved_dynamics_plot.py
PhaseDiagramCalculations/GradientDescent_1l/: main.cpp
PhaseDiagramCalculations/GradientDescent_2l/: Makefile  main.cpp
PhaseDiagramCalculations/SimulatedAnnealing_1l/: main.cpp  surface_pattern_1l.py
PhaseDiagramCalculations/SimulatedAnnealing_2l/: main.cpp  surface_pattern_2l.py
run_gd1l/: cms.txt  endcms.txt
tests/: wigner_compat_test.cpp
